@@ -1,9 +1,13 @@
 2003-02-15  Jim Meyering  <jim@meyering.net>
 
+	* mmap-stack.c, mmap-stack.h: New files.
+	Let the caller run a function with a larger (mmap'd) stack.
+
 	Add Irix6 support to physmem.c.
 	* physmem.c (irix_sysget): New function.
 	(IRIX_SYSGET_TOTAL, IRIX_SYSGET_AVAILABLE): New macros.
 	(physmem_total, physmem_available): Use them.
+	(main) [DEBUG]: New function.
 
 2003-02-11  Jim Meyering  <jim@meyering.net>
 
